RESOLVED FIXED146834
[EFL] http/tests/media/media-stream/disconnected-frame-already.html is crashing after r185903
https://bugs.webkit.org/show_bug.cgi?id=146834
Summary [EFL] http/tests/media/media-stream/disconnected-frame-already.html is crashi...
Hunseop Jeong
Reported 2015-07-10 04:08:00 PDT
Expected : Passed Actual : Crash
Attachments
Crash log (2.95 MB, image/png)
2015-07-10 10:35 PDT, Hunseop Jeong
no flags
Patch (15.90 KB, patch)
2015-07-30 08:39 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2015-07-10 05:36:53 PDT
Can you provide a debug crash log?
Hunseop Jeong
Comment 2 2015-07-10 06:34:33 PDT
I'm out of office. I'll upload the crash log.
Hunseop Jeong
Comment 3 2015-07-10 10:35:03 PDT
Created attachment 256587 [details] Crash log EFL port doesn't work the copy&paste :( so I upload the capture of log.
youenn fablet
Comment 4 2015-07-10 14:09:37 PDT
Thanks. It may be that I went too far in removing one check within webkitGetUserMedia. I am not sure why this is happening for EFL port and not the other ports. I am away next two weeks, I can study that at my return. In the meantime, you can look at the first removed check in the revision within NavigatorUserMedia::webkitGetUserMedia.
youenn fablet
Comment 5 2015-07-30 08:39:11 PDT
Eric Carlson
Comment 6 2015-07-31 09:06:07 PDT
Comment on attachment 257835 [details] Patch Nice refactoring!
WebKit Commit Bot
Comment 7 2015-08-03 08:38:43 PDT
Comment on attachment 257835 [details] Patch Clearing flags on attachment: 257835 Committed r187737: <http://trac.webkit.org/changeset/187737>
WebKit Commit Bot
Comment 8 2015-08-03 08:38:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.