[EFL] http/tests/media/media-stream/disconnected-frame-already.html is crashing after r185903 https://bugs.webkit.org/show_bug.cgi?id=146834

Reviewed by Eric Carlson.

r185903 went to far in removing some tests, in particular whether the current process is related to a frame.
Readded that check.
Refactored the code to remove the need for NavigatorUserMedia class.

Covered by existing tests.

* CMakeLists.txt: Removed NavigatorUserMedia.cpp.
* Modules/mediastream/NavigatorUserMedia.cpp: Removed.
* Modules/mediastream/NavigatorUserMedia.h: Removed.
* WebCore.xcodeproj/project.pbxproj: Ditto.
* bindings/js/JSNavigatorCustom.cpp:
(WebCore::JSNavigator::webkitGetUserMedia): Inlined NavigatorUserMeia::webkitGetUserMedia.


Canonical link: https://commits.webkit.org/165622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187737 268f45cc-cd09-0410-ab3c-d52691b4dbfc